Parcels layer and selection feature
Added GEOJson parcel layer and a feature that allows you to select multiple parcels

--- a/Client/gradbena-soglasja-react-project/src/components/Confirm/confirm.sass
+++ b/Client/gradbena-soglasja-react-project/src/components/Confirm/confirm.sass
@@ -11,6 +11,8 @@
     border-radius: 12.5px
     border: none
 
+.secondaryColor
+    background-color: $secondaryColor
 .confirm img
     height: 30px
     width: 30px
