--- a/Client/gradbena-soglasja-react-project/src/components/Suggestions/suggestions.sass
+++ b/Client/gradbena-soglasja-react-project/src/components/Suggestions/suggestions.sass
@@ -18,6 +18,9 @@
     font-size: $primaryFontSize
     padding-left: 60px
 
+.autocomplete-container b
+    font-weight: 500
+
 .autocomplete-container li img
     position: absolute
     left: 15px
