--- a/Client/gradbena-soglasja-react-project/src/variables.sass
+++ b/Client/gradbena-soglasja-react-project/src/variables.sass
@@ -3,5 +3,5 @@ $secondaryColor: #0D99FF
 $primaryFontSize: 1.15rem
 $secondaryFontSize: 1rem
 $lightgray: #f4f4f4
-$mediumgray: #e4e4e4
+$mediumgray: #ebebeb
 $darkgray: #b4b4b4
