--- a/Client/gradbena-soglasja-react-project/src/components/Suggestions/suggestions.sass
+++ b/Client/gradbena-soglasja-react-project/src/components/Suggestions/suggestions.sass
@@ -30,3 +30,8 @@
 .autocomplete-container li:hover
     background-color: $mediumgray
     cursor: pointer
+
+.cityName
+    color: $secondaryFontColor
+    font-size: $secondaryFontSize
+    margin-left: 7.5px
