Back-end with parcels
Working basic back-end structure already implementing own parcels layer

--- a/Client/gradbena-soglasja-react-project/src/components/Suggestions/suggestions.sass
+++ b/Client/gradbena-soglasja-react-project/src/components/Suggestions/suggestions.sass
@@ -24,8 +24,14 @@
 .autocomplete-container li img
     position: absolute
     left: 15px
+
+.icon-location
     height: 32px
     width: 32px
+
+.icon-home
+    height: 28px
+    width: 28px
 
 .autocomplete-container li:hover
     background-color: $mediumgray
