--- a/frontend/src/pages/Tract/components/Category/category.sass
+++ b/frontend/src/pages/Tract/components/Category/category.sass
@@ -1,3 +1,9 @@
+.category-container
+    display: flex
+    flex-direction: column
+    align-items: center
+    width: 100%
+    
 .category-header
     display: flex
     align-items: center
@@ -5,7 +11,6 @@
     padding: 15px 30px 15px 30px
     width: 100%
     height: 100px
-    margin-bottom: 200px
     box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.2)
     
 .category-header img
@@ -23,3 +28,6 @@
     font-weight: 400
     font-size: 1rem
 
+.category-content
+    width: 80%
+    padding: 50px 0px
