--- a/frontend/src/components/Loading/loading.sass
+++ b/frontend/src/components/Loading/loading.sass
@@ -17,8 +17,8 @@ $borderWidth: 4px
 .loader
     border: $borderWidth solid $lightgray
     border-radius: 50%
-    border-top: $borderWidth solid $darkgray
-    border-left: $borderWidth solid $darkgray
+    border-top: $borderWidth solid #c2c2c2
+    border-left: $borderWidth solid #c2c2c2
     width: 30px
     height: 30px
     -webkit-animation: spin 1s linear infinite
