--- a/frontend/src/pages/Home/components/Suggestion/suggestion.sass
+++ b/frontend/src/pages/Home/components/Suggestion/suggestion.sass
@@ -5,11 +5,11 @@
     height: 40px
     display: flex
     align-items: center
-    font-size: 1.05rem
-    padding-left: 60px
+    font-size: 1rem
+    padding-left: 50px
 
 .suggestion-container:hover
-    background-color: $lightgray
+    background-image: $darken-bg
     cursor: pointer
 
 .suggestion-container b
@@ -20,14 +20,14 @@
     left: 15px
 
 .icon-location
-    height: 30px
-    width: 30px
+    height: 24px
+    width: 24px
 
 .icon-home
-    height: 27px
-    width: 27px
+    height: 21px
+    width: 21px
 
 .cityName
     color: $secondaryFontColor
-    font-size: $secondaryFontSize
+    font-size: 0.85rem
     margin-left: 7.5px
