--- a/frontend/src/pages/Home/components/Confirm/confirm.sass
+++ b/frontend/src/pages/Home/components/Confirm/confirm.sass
@@ -3,20 +3,22 @@
 
 .confirm
     position: absolute
-    right: 15px
-    bottom: 15px
-    background-color: $darkgray
-    width: 60px
-    height: 50px
+    right: 20px
+    bottom: 20px
+    background-color: #e1e1e1
+    width: 45px
+    height: 45px
     display: flex
     justify-content: center
     align-items: center
-    border-radius: 30%
+    border-radius: 100%
     border: none
+    box-shadow: 0.5px 1px 2px 0px rgba(0, 0, 0, 0.2)
+
 
 .confirm img
-    height: 30px
-    width: 30px
+    height: 25px
+    width: 25px
 
 .confirm:hover,
 .confirm:focus
