--- a/frontend/src/pages/Home/components/Map/map.sass
+++ b/frontend/src/pages/Home/components/Map/map.sass
@@ -5,22 +5,31 @@
     width: 100%
     height: 100%
 
-.maplibregl-ctrl-geolocate
-    height: 40px !important
-    width: 40px !important
+
+.maplibregl-ctrl-bottom-left .mapboxgl-ctrl-group, .maplibregl-ctrl-bottom-left .maplibregl-ctrl-group
+    background-color: transparent !important
 
 .mapboxgl-ctrl-group, .maplibregl-ctrl-group, .mapboxgl-ctrl-icon, .maplibregl-ctrl-icon
-    box-shadow: none !important
-    border-radius: 30% !important
-    background-color: $primaryColor !important
-
-.mapboxgl-ctrl-icon:hover, .maplibregl-ctrl-icon:hover
-    // background-color: $lightgray !important
-    background-color: darken($primaryColor, 5%) !important
+    box-shadow: 0.5px 1px 2px 0px rgba(0, 0, 0, 0.2) !important
+    background-color: transparent !important
 
 .mapboxgl-ctrl button:not(:disabled):hover
     background-color: transparent !important
         
-.mapboxgl-ctrl-bottom-left .mapboxgl-ctrl, .maplibregl-ctrl-bottom-left .maplibregl-ctrl
-    margin: 0 0 15px 15px
+.mapboxgl-ctrl, .maplibregl-ctrl
+    margin: 20px !important
 
+.mapboxgl-ctrl-icon, .maplibregl-ctrl-icon 
+    background-color: #ffffff !important
+
+.mapboxgl-ctrl-geolocate .mapboxgl-ctrl-icon, .maplibregl-ctrl button .maplibregl-ctrl-icon 
+    border-radius: 100% !important
+    box-shadow: 0.5px 1px 2px 0px rgba(0, 0, 0, 0.2) !important
+    height: 45px !important
+    width: 45px !important
+
+.mapboxgl-ctrl-geolocate .mapboxgl-ctrl-icon:hover, .mapboxgl-ctrl-geolocate .maplibregl-ctrl-icon:hover
+    // Can not use $darken-bg because background-image is already set to the icon 
+    // of geolocate. 3.25% on darken function matches that overlay exactly.
+    // background-image: $darken-bg
+    background-color: darken($primaryColor, 3.25%) !important
