--- a/frontend/src/pages/Home/components/Search/search.sass
+++ b/frontend/src/pages/Home/components/Search/search.sass
@@ -6,7 +6,7 @@
     display: flex
     flex-direction: column
     width: 100%
-    margin: 15px 15px 15px 15px
+    margin: 20px
 
 .search-container
     display: flex
@@ -15,19 +15,20 @@
 .search-container input
     width: 100%
     height: 50px
-    border-radius: 50px
+    border-radius: 20px
     border: none
     background-color: $primaryColor
-    padding-left: 60px
-    font-size: $primaryFontSize
+    padding-left: 50px
+    font-size: 1rem
+    box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, 0.2)
     // box-shadow: 5.7px 5.9px 7.2px -4px rgba(0, 0, 0, 0.22), 15.7px 16.3px 20px -4px rgba(0, 0, 0, 0.039), 37.7px 39.2px 48.2px -4px rgba(0, 0, 0, 0.051), 125px 130px 160px -4px rgba(0, 0, 0, 0.07)
 
 .search-container input::placeholder
     color: $darkgray
 
 .search-container img
-    height: 32px
-    width: 32px
+    height: 24px
+    width: 24px
     position: absolute
 
 .search-container .search-icon
@@ -39,8 +40,8 @@
 
 @media screen and ( min-width: 480px  )
     .search-suggestions-container
-        width: 40%
-        min-width: 450px
-        max-width: 525px
+        width: 100%
+        min-width: 400px
+        max-width: 425px
     .search-container input
-        height: 50px
+        height: 45px
