--- a/frontend/src/pages/Home/components/Suggestions/suggestions.sass
+++ b/frontend/src/pages/Home/components/Suggestions/suggestions.sass
@@ -6,8 +6,11 @@
     list-style-type: none
     width: 100%
     background-color: $primaryColor
-    border-radius: 15px
+    border-radius: 10px
     padding: 0
     max-height: 40px * 5
     overflow-y: scroll
     scrollbar-width: thin
+    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.2)
+
+
