--- a/frontend/src/pages/Tract/components/Header/header.sass
+++ b/frontend/src/pages/Tract/components/Header/header.sass
@@ -2,25 +2,55 @@
 
 .header
     position: relative
-    width: 100%
-    // height: 25%
     height: auto
-    box-sizing: content-box
+    width: 100%
+    padding: 20px 0px
+
+.header .settlement
+    font-size: 1.25rem
+    font-weight: 500
+    margin: 0
+
+.header .street
+    font-size: 0.9rem
+    font-weight: 500
+    color: #c2c2c2
+    margin-top: 2px
+
+.usage
+    position: absolute
+    right: 0px
+    top: 25px
+
+.usage img
+    height: 30px
+    width: 30px
+
+.actions
     display: flex
-    flex-direction: row
-    justify-content: space-between
-    // padding: 25px 50px 25px 50px
-    padding: 15px 30px 30px 30px
-    box-sizing: border-box
+    gap: 25px
+    padding-top: 5px
 
-h2
-    margin: 0px 0px 5px 0px
-    font-weight: 600
-    font-size: 1.75rem
+.action
+    display: flex
+    gap: 7.5px
+    align-items: center
 
-p
-    margin: 0px 0px 5px 0px
-    font-size: 1.15rem
+.action:hover
+    cursor: pointer
+    text-decoration: underline
+    text-decoration-color: $secondaryColor
+
+.action img
+    height: 18px
+    width: 18px
+
+.action p
+    color: $secondaryColor
+    font-weight: 500
+    font-size: 0.9rem
+    margin: 0
+
 
 
         
