--- a/frontend/src/pages/Tract/components/TractMap/tract-map.sass
+++ b/frontend/src/pages/Tract/components/TractMap/tract-map.sass
@@ -2,8 +2,9 @@
 
 .tract-map
     position: relative
+    float: right
     width: 100%
-    height: 75vh
+    height: 100vh
 
 .maplibregl-ctrl-geolocate
     height: 40px !important
