--- a/frontend/src/variables.sass
+++ b/frontend/src/variables.sass
@@ -3,9 +3,11 @@ $secondaryColor: #0D99FF
 $primaryFontSize: 1.15rem
 $secondaryFontSize: 1rem
 $lightgray: #f4f4f4
-$mediumgray: #ebebeb
-$darkgray: #d1d1d1
+// $mediumgray: #ebebeb
+$mediumgray: #c2c2c2
+// $darkgray: #c2c2c2
+$darkgray: #858585
 $secondaryFontColor: #949494
 
 $lighten-bg: url('data:image/svg+xml;utf8,<svg version="1.1" id="cssLighten" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="50px" height="50px" viewBox="0 0 50 50" enable-background="new 0 0 50 50" xml:space="preserve"><rect opacity="0.15" fill="white" width="50" height="50"/></svg>') !important
-$darken-bg: url('data:image/svg+xml;utf8,<svg version="1.1" id="cssDarken" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="50px" height="50px" viewBox="0 0 50 50" enable-background="new 0 0 50 50" xml:space="preserve"><rect opacity="0.15" fill="black" width="50" height="50"/></svg>') !important
+$darken-bg: url('data:image/svg+xml;utf8,<svg version="1.1" id="cssDarken" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="50px" height="50px" viewBox="0 0 50 50" enable-background="new 0 0 50 50" xml:space="preserve"><rect opacity="0.03" fill="black" width="50" height="50"/></svg>') !important
