--- a/frontend/src/pages/Tract/components/Chart/chart.sass
+++ b/frontend/src/pages/Tract/components/Chart/chart.sass
@@ -2,23 +2,23 @@
 
 .chart-container
     display: flex
-    gap: 5px
+    gap: 10px
     align-items: center
 
 .chart-background
-    height: 7px
+    height: 10px
     border-radius: 10px
-    background-color: $mediumgray
+    background-color: #f2f2f2
 
 .chart-value
-    height: 7px
+    height: 10px
     border-radius: 10px
     background-color: #A8DA81
 
 .chart-text
-    display: none
-    font-size: 0.65rem
+    font-size: 0.7rem
     font-weight: 500
+    line-height: 0.7
+    margin: 0
+    padding: 0
 
-.opened .chart-text
-    display: block
