--- a/frontend/src/pages/Tract/components/Permit/permit.sass
+++ b/frontend/src/pages/Tract/components/Permit/permit.sass
@@ -5,7 +5,7 @@
     display: flex
     flex-direction: column
     width: 100%
-    padding: 15px 25px
+    padding: 10px 35px
     
 .permit-header
     width: 100%
@@ -17,7 +17,11 @@
     background-image: $darken-bg
     cursor: pointer
 
-.permit-container img
+.permit-container .permit-icon
+    height: 22px
+    width: 22px
+
+.permit-container .box
     height: 25px
     width: 25px
 
@@ -27,10 +31,11 @@
 .permit-container .data
     display: flex
     flex-direction: column
-    gap: 5px
+    gap: 10px
     overflow: hidden
 
 .permit-container .data .title
+    color: #000
     font-weight: 500
     font-size: 1rem
 
@@ -40,7 +45,7 @@
     white-space: normal !important
 
 .permit-container .data .subtitle
-    color: $darkgray
+    color: #c2c2c2
     font-weight: 500
     font-size: 0.75rem
     margin-top: -5px
@@ -54,7 +59,7 @@
 
 .permit-content
     display: none
-    padding: 10px 0px 10px 45px
+    padding: 0px 0px 10px 0px
 
 .opened .permit-content
     display: flex
@@ -64,7 +69,7 @@
 .permit-features-title
     font-weight: 500
     font-size: 0.8rem
-    color: $darkgray
+    color: #858585
 
 .permit-features
     padding: 5px 0px
@@ -77,13 +82,13 @@
     gap: 10px
     align-items: center
 
-.permit-feature:hover
-    background-image: $darken-bg
-    cursor: pointer
+// .permit-feature:hover
+//     background-image: $darken-bg
+//     cursor: pointer
 
 .permit-feature img
-    height: 20px
-    width: 20px
+    height: 18px
+    width: 18px
 
 .permit-feature p
     font-weight: 500
