--- a/frontend/src/pages/Tract/components/Save/save.sass
+++ b/frontend/src/pages/Tract/components/Save/save.sass
@@ -1,7 +1,7 @@
 @import "src/variables.sass"
 
 .save
-    padding: 15px 0px 0px 0px
+    padding-top: 5px
     display: flex
     align-items: center
     width: 100%
@@ -9,7 +9,7 @@
 .save input
     width: 100%
     height: 35px
-    background-color: #FAFAFA
+    background-image: $darken-bg
     border-radius: 5px
     border: none
     color: #c2c2c2
