--- a/frontend/src/pages/Tract/components/Share/share.sass
+++ b/frontend/src/pages/Tract/components/Share/share.sass
@@ -1,7 +1,7 @@
 @import "src/variables.sass"
 
 .share
-    padding: 15px 0px
+    padding-top: 5px
     display: flex
     align-items: center
     width: 100%
