--- a/frontend/src/pages/Tract/components/Popup/popup.sass
+++ b/frontend/src/pages/Tract/components/Popup/popup.sass
@@ -33,13 +33,14 @@
 .popup .title
     font-weight: 500
     font-size: 1rem
-    margin-bottom: 5px
+    margin-bottom: 2px
 
 .popup .subtitle
-    color: #c2c2c2
+    color: #858585
     font-weight: 500
-    font-size: 0.8rem
-    margin-bottom: 12px
+    font-size: 0.9rem
+    margin: 0px 0px 6px 0px
+    padding: 0px
 
 .popup .overview
     gap: 5px
