--- a/frontend/src/pages/Tract/components/SidePanel/side-panel.sass
+++ b/frontend/src/pages/Tract/components/SidePanel/side-panel.sass
@@ -11,12 +11,17 @@
     float: left
     overflow-y: auto
 
+.side-container::-webkit-scrollbar
+    display: none
 
 .side-padding
     padding: 25px 25px 0px 25px 
 
 .side-padding:last-child *
     padding-bottom: 0px
+
+
+
 
 
 
